update dependencies to work with Java 17 and Bamboo 10.2.x move ServerConfigManager bean from atlassian-plugin xml to  JavaConfig update package dependency version. Refactor code to use Map.of for immutable maps and improve null handling in context creation